# shai

./: .env.example  .gitignore  AGENTS.md  Containerfile  PLAN-SHAI-CLI.md  Procfile  README.md  shai
.github/opencode/: config.json
.github/workflows/: task-machine.yml
bots/: telegram_router.py
docs/: a2a_integration_design.md  deployment_design.md  telegram_routing_design.md  telegram_usage.md
ops/: uv_start.sh
output/20/: issue_context.json  issue_conversation.md  task_machine_plan.md  weather_brief.md  weather_report.md
output/22/: README.md  acceptance_checks.md  implementation_notes.md  issue_context.json  issue_conversation.md  pyproject.toml  requirements.md  task_machine_plan.md  test_report.md
output/22/src/roll_dice/: __init__.py  cli.py
output/25/: final_recommendations.md  issue_context.json  issue_conversation.md  protection_insights.md  protection_summary.md  remediation_plan.md  status_report.md  task_machine_plan.md
output/26/: calendar_delivery_plan.md  colab_scaffolds.md  issue_context.json  issue_conversation.md  narrative_cues.md  narrative_modules.md  notebook_blueprint.md  notebook_requirements.md  notebook_validation_report.md  notebook_validation_results.json  production_order.md  run_notebook_validation.py  task_machine_plan.md
output/27/: fasta2a_brief.md  issue_context.json  issue_conversation.md  key_points.md  research_notes.md  task_machine_plan.md
output/28/: claude_code_mcp_config.json  issue_context.json  issue_conversation.md  repo_catalog.md  repository_map.md  research_notes.md  review_log.md  stack_requirements.md  task_machine_plan.md
output/30/: financial_model.md  issue_context.json  issue_conversation.md  market_research.md  research_insights.md  roadmap.md  strategy_brief.md  task_machine_plan.md
output/31/: issue_context.json  issue_conversation.md  mega_trend_essay.md  mega_trend_presentation.html  mega_trend_research.md  task_machine_plan.md
output/34/: deployment_architecture.md  (+11 more)
output/36/: README.md  cli_command_design.md  cli_requirements.md  cli_test_report.md  issue_context.json  issue_conversation.md  pyproject.toml  rag_architecture.md  rag_module_design.md  rag_requirements.md  rag_test_report.md  task_machine_plan.md  uv_build_architecture.md
output/36/config/: defaults.toml
output/36/src/docling_milvus_rag/: __init__.py  __main__.py  cache.py  chunker.py  cli.py  config.py  docling_loader.py  embeddings.py  llm.py  logging.py  milvus_store.py  pipeline.py  retrieval.py
output/36/tests/: test_cli_entrypoint.py  test_rag_pipeline.py
output/41/: README.md  feature1_architecture.md  feature1_cli_notes.md  feature1_design.md  feature1_error_analysis.md  feature1_impl_notes.md  feature1_qa_signoff.md  feature1_replan.md  feature1_requirements.md  feature1_test_report.md  issue_context.json  issue_conversation.md  pyproject.toml  task_machine_plan.md
output/41/pyrag/: __init__.py  __main__.py  chunker.py  config.py  doc_loader.py  embed.py  logging.py  pipeline.py  types.py  vectorstore.py
output/41/tests/: test_pyrag_dummy_pdf.py
output/42/: .env.example  README.md  env_defects.md  env_requirements.md  issue_context.json  issue_conversation.md  lib_build_log.md  lib_requirements.md  lib_test_results.md  pyproject.toml  rag_architecture.md  rag_defects.md  rag_design.md  rag_requirements.md  task_machine_plan.md  uv_architecture.md  uv_test_results.md
output/42/docs/: env_architecture.md  env_build_log.md  env_design.md  env_requirements.md  env_test_results.md  issue_conversation.md  lib_architecture.md  lib_defects.md  lib_design.md  lib_docs.md  rag_build_log.md  rag_test_results.md  uv_build_log.md  uv_defects.md  uv_design.md  uv_requirements.md
output/42/pyrag/: __init__.py  __main__.py  chunker.py  cli.py  config.py  embedder.py  exceptions.py  loader.py  logging.py  pipeline.py  search.py  storage.py  validation.py
output/42/tests/: test_modules.py  test_pipeline.py
output/42/tmp_cli_debug2/: docling_source.json
prompts/: document_to_product_intelligence_prompt.md
scripts/: agent_conversation.md  agent_conversation.sh  browser_automation.sh  pipeline_essay.sh  pipeline_rfq.sh  pipeline_rfq_ai.sh  pipeline_rfq_ai_poc.sh  pipeline_task_machine.sh
services/: __init__.py  a2a_adapter.py  a2a_config.py  a2a_errors.py  a2a_metadata.py  a2a_telemetry.py
templates/: task_machine_multirole.md
tests/: test_a2a_adapter.py  test_telegram_routing.py
(+34 files in other folders)
